[package]
name = "beehive"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = { version = "0.6.15", features = ["multipart"] }
base64 = "0.21.0"
bytes = "1.4.0"
clap = { version = "4.2.2", features = ["derive"] }
chrono = "0.4.24"
dunce = "1.0.3"
humansize = "2.1.3"
percent-encoding = "2.2.0"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "limit", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
lto = true
