[package]
name = "beehive"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart"] }
base64 = "0.22.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
dunce = "1.0.4"
humansize = "2.1.3"
percent-encoding = "2.3.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
