[package]
name = "beehive"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.9", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
dunce = "1.0.5"
humansize = "2.1.3"
percent-encoding = "2.3.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
lto = true
